edits(notebook): abstract

--- a/notebooks/abstract.ipynb
+++ b/notebooks/abstract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,27 +103,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Array{Int64,1}:\n",
+       " 0\n",
+       " 0\n",
+       " 1\n",
+       " 0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ψ = [0,1] ⊗ [1,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Complex{Float32},2}:\n",
+       " 0.0+0.0im  1.0+0.0im\n",
+       " 1.0+0.0im  0.0+0.0im"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "CX̂.gate.U # the single qubit X gate is the kernel of this operation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Array{Complex{Float32},1}:\n",
+       " 0.0f0 + 0.0f0im\n",
+       " 0.0f0 + 0.0f0im\n",
+       " 0.0f0 + 0.0f0im\n",
+       " 1.0f0 + 0.0f0im"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "N = 2 # number of qubits, we need to give this to the gate\n",
     "ψ = Complex{Float32}.(ψ)\n",
@@ -133,9 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Complex{Float32},2}:\n",
+       " 0.0+0.0im  1.0+0.0im\n",
+       " 1.0+0.0im  0.0+0.0im"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tag = (:CCNOT, (3, 1, 2))\n",
     "\n",
@@ -146,27 +202,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Int64,1}:\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " ⋮\n",
+       " 0\n",
+       " 0\n",
+       " 1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ψ′ = [0,1] ⊗ [0,1] ⊗ [0,1]"
+    "ψ′ = [0,1] ⊗ [0,1] ⊗ [0,1] # |111>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Int64,1}:\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " ⋮\n",
+       " 1\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Int.(CCNOT(C.(ψ′), 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Complex{Float32},1}:\n",
+       "       0.0f0 + 0.0f0im\n",
+       "       0.0f0 + 0.0f0im\n",
+       "       0.0f0 + 0.0f0im\n",
+       "             ⋮\n",
+       "       0.0f0 + 0.0f0im\n",
+       "       0.0f0 + 0.0f0im\n",
+       " 0.2931853f0 + 0.95605564f0im"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "CCPHASE(θ, i, j, k) = Control((:CCPHASE, Float32(θ), (i, j, k)))\n",
     "\n",
@@ -177,18 +287,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CCNOT 3 1 2 \n"
+     ]
+    }
+   ],
    "source": [
     "show(CCNOT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Complex{Float32},2}:\n",
+       " 0.707107+0.0im            0.0+0.707107im\n",
+       "      0.0+0.707107im  0.707107+0.0im"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "R̂ₓ(γ, k) = Gate((:RX, Float32(γ), k))\n",
     "\n",
@@ -199,18 +330,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Symbol,Function} with 4 entries:\n",
+       "  :RZ    => #3\n",
+       "  :PHASE => #4\n",
+       "  :RY    => #2\n",
+       "  :RX    => #1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PARAM_GATES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Symbol,Array{T,2} where T} with 8 entries:\n",
+       "  :Z   => [1 0; 0 -1]\n",
+       "  :T   => Complex{Float64}[1.0+0.0im 0.0+0.0im; 0.0+0.0im 0.707107+0.707107im]\n",
+       "  :I   => [1 0; 0 1]\n",
+       "  :NOT => [0 1; 1 0]\n",
+       "  :H   => [0.707107 0.707107; 0.707107 -0.707107]\n",
+       "  :S   => Complex{Int64}[1+0im 0+0im; 0+0im 0+1im]\n",
+       "  ⋮    => ⋮"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "GATES"
    ]
@@ -251,9 +415,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Complex{Float32},2}:\n",
+       " 0.0+0.0im  0.0-1.0im\n",
+       " 0.0+1.0im  0.0+0.0im"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "N = 3\n",
     "Y = Complex{Float32}.(GATES[:Y])"
@@ -261,9 +438,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8×8 Array{Int64,2}:\n",
+       " 0  0  -1   0  0  0  0   0\n",
+       " 0  0   0  -1  0  0  0   0\n",
+       " 1  0   0   0  0  0  0   0\n",
+       " ⋮                ⋮     \n",
+       " 0  0   0   0  0  0  0  -1\n",
+       " 0  0   0   0  1  0  0   0\n",
+       " 0  0   0   0  0  1  0   0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Ỹ = tensor(Y, 2, N)\n",
     "\n",
@@ -312,7 +507,7 @@
     "We are now able to move qubits around, allowing for arbitrary 2 & 3 qubit control gates. so we can transform any operator into a corresponding operator with an easily accessible representation. Of course $\\sigma$ is unitary so,\n",
     "\n",
     "$$\n",
-    "U' = \\sigma^{\\dagger}U\\sigma\n",
+    "U \\leftarrow \\sigma^{\\dagger}U\\sigma\n",
     "$$\n",
     "\n",
     "and since $\\sigma$ is just a product of SWAP gates, its inverse is just the reverse product:\n",
@@ -339,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,9 +555,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "compiling quip to circuit\n",
+      "\n",
+      "  compiling H 2\n",
+      "  compiling CX 2 1 \n",
+      "  compiling MEASURE 2\n",
+      "  compiling MEASURE 1\n",
+      "\n",
+      "compiled\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "N = 2\n",
     "\n",
@@ -378,31 +590,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "beginning run\n",
+      "\n",
+      "  H 2\n",
+      "  CX 2 1 \n",
+      "  MEASURE 2\n",
+      "   -> false\n",
+      "  MEASURE 1\n",
+      "   -> false\n",
+      "\n",
+      "finished run\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "run!(QC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element BitArray{1}:\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "QC.out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bool[1, 1]\n",
+      "Bool[1, 1]\n",
+      "Bool[1, 1]\n",
+      "Bool[1, 1]\n",
+      "Bool[1, 1]\n",
+      "Bool[0, 0]\n",
+      "Bool[0, 0]\n",
+      "Bool[1, 1]\n",
+      "Bool[1, 1]\n",
+      "Bool[1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "for i = 1:10\n",
     "    reset!(QC)\n",
-    "    run!(QC, verbose)\n",
+    "    run!(QC, false)\n",
     "    println(QC.out)\n",
     "end"
    ]
@@ -413,11 +674,18 @@
    "source": [
     "and we see entanglement in correlation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.1",
+   "display_name": "Julia 1.4.0",
    "language": "julia",
    "name": "julia-1.4"
   },
@@ -425,7 +693,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.1"
+   "version": "1.4.0"
   }
  },
  "nbformat": 4,
