refactor: proper packaging

--- a/notebooks/abstract.ipynb
+++ b/notebooks/abstract.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "push!(LOAD_PATH, homedir()*\"/Projects/QuIPS/src\");"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CX̂ = Control((:CX, (1, 2)));"
+    "CX̂ = ControlGate((:CX, (1, 2)));"
    ]
   },
   {
@@ -103,22 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4-element Array{Int64,1}:\n",
+       "4-element Vector{Int64}:\n",
        " 0\n",
        " 0\n",
        " 1\n",
        " 0"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -127,20 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×2 Array{Complex{Float32},2}:\n",
+       "2×2 Matrix{ComplexF32}:\n",
        " 0.0+0.0im  1.0+0.0im\n",
        " 1.0+0.0im  0.0+0.0im"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -149,22 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4-element Array{Complex{Float32},1}:\n",
+       "4-element Vector{ComplexF32}:\n",
        " 0.0f0 + 0.0f0im\n",
        " 0.0f0 + 0.0f0im\n",
        " 0.0f0 + 0.0f0im\n",
        " 1.0f0 + 0.0f0im"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -176,51 +164,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×2 Array{Complex{Float32},2}:\n",
+       "2×2 Matrix{ComplexF32}:\n",
        " 0.0+0.0im  1.0+0.0im\n",
        " 1.0+0.0im  0.0+0.0im"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "tag = (:CCNOT, (3, 1, 2))\n",
     "\n",
-    "CCNOT = Control(tag)\n",
+    "CCNOT = ControlGate(tag)\n",
     "\n",
     "CCNOT.gate.U # has the same kernel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8-element Array{Int64,1}:\n",
+       "8-element Vector{Int64}:\n",
        " 0\n",
        " 0\n",
        " 0\n",
-       " ⋮\n",
+       " 0\n",
+       " 0\n",
        " 0\n",
        " 0\n",
        " 1"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -229,25 +216,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8-element Array{Int64,1}:\n",
+       "8-element Vector{Int64}:\n",
        " 0\n",
        " 0\n",
        " 0\n",
-       " ⋮\n",
+       " 0\n",
+       " 0\n",
        " 1\n",
        " 0\n",
        " 0"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -256,29 +243,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8-element Array{Complex{Float32},1}:\n",
+       "8-element Vector{ComplexF32}:\n",
        "       0.0f0 + 0.0f0im\n",
        "       0.0f0 + 0.0f0im\n",
        "       0.0f0 + 0.0f0im\n",
-       "             ⋮\n",
+       "       0.0f0 + 0.0f0im\n",
+       "       0.0f0 + 0.0f0im\n",
        "       0.0f0 + 0.0f0im\n",
        "       0.0f0 + 0.0f0im\n",
        " 0.2931853f0 + 0.95605564f0im"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "CCPHASE(θ, i, j, k) = Control((:CCPHASE, Float32(θ), (i, j, k)))\n",
+    "CCPHASE(θ, i, j, k) = ControlGate((:CCPHASE, Float32(θ), (i, j, k)))\n",
     "\n",
     "G = CCPHASE(π \\ 4, 3, 1, 2)\n",
     "\n",
@@ -287,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -304,20 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×2 Array{Complex{Float32},2}:\n",
+       "2×2 Matrix{ComplexF32}:\n",
        " 0.707107+0.0im            0.0+0.707107im\n",
        "      0.0+0.707107im  0.707107+0.0im"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -330,53 +316,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dict{Symbol,Function} with 4 entries:\n",
+       "Dict{Symbol, Function} with 4 entries:\n",
        "  :RZ    => #3\n",
        "  :PHASE => #4\n",
        "  :RY    => #2\n",
        "  :RX    => #1"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "PARAM_GATES"
+    "PARAM_GATES = QuIPS.Operators.PARAM_GATES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dict{Symbol,Array{T,2} where T} with 8 entries:\n",
+       "Dict{Symbol, Matrix} with 8 entries:\n",
        "  :Z   => [1 0; 0 -1]\n",
-       "  :T   => Complex{Float64}[1.0+0.0im 0.0+0.0im; 0.0+0.0im 0.707107+0.707107im]\n",
+       "  :T   => ComplexF64[1.0+0.0im 0.0+0.0im; 0.0+0.0im 0.707107+0.707107im]\n",
        "  :I   => [1 0; 0 1]\n",
        "  :NOT => [0 1; 1 0]\n",
        "  :H   => [0.707107 0.707107; 0.707107 -0.707107]\n",
        "  :S   => Complex{Int64}[1+0im 0+0im; 0+0im 0+1im]\n",
-       "  ⋮    => ⋮"
+       "  :X   => [0 1; 1 0]\n",
+       "  :Y   => Complex{Int64}[0+0im 0-1im; 0+1im 0+0im]"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "GATES"
+    "GATES = QuIPS.Operators.GATES"
    ]
   },
   {
@@ -415,20 +400,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×2 Array{Complex{Float32},2}:\n",
+       "2×2 Matrix{ComplexF32}:\n",
        " 0.0+0.0im  0.0-1.0im\n",
        " 0.0+1.0im  0.0+0.0im"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -438,25 +422,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8×8 Array{Int64,2}:\n",
-       " 0  0  -1   0  0  0  0   0\n",
-       " 0  0   0  -1  0  0  0   0\n",
-       " 1  0   0   0  0  0  0   0\n",
-       " ⋮                ⋮     \n",
-       " 0  0   0   0  0  0  0  -1\n",
-       " 0  0   0   0  1  0  0   0\n",
-       " 0  0   0   0  0  1  0   0"
+       "8×8 Matrix{Int64}:\n",
+       " 0  0  -1   0  0  0   0   0\n",
+       " 0  0   0  -1  0  0   0   0\n",
+       " 1  0   0   0  0  0   0   0\n",
+       " 0  1   0   0  0  0   0   0\n",
+       " 0  0   0   0  0  0  -1   0\n",
+       " 0  0   0   0  0  0   0  -1\n",
+       " 0  0   0   0  1  0   0   0\n",
+       " 0  0   0   0  0  1   0   0"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -534,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -603,9 +587,9 @@
       "  H 2\n",
       "  CX 2 1 \n",
       "  MEASURE 2\n",
-      "   -> false\n",
+      "   -> true\n",
       "  MEASURE 1\n",
-      "   -> false\n",
+      "   -> true\n",
       "\n",
       "finished run\n",
       "\n"
@@ -618,20 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2-element BitArray{1}:\n",
-       " 0\n",
-       " 0"
+       "2-element BitVector:\n",
+       " 1\n",
+       " 1"
       ]
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -640,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -650,12 +633,12 @@
       "Bool[1, 1]\n",
       "Bool[1, 1]\n",
       "Bool[1, 1]\n",
+      "Bool[0, 0]\n",
       "Bool[1, 1]\n",
       "Bool[1, 1]\n",
       "Bool[0, 0]\n",
       "Bool[0, 0]\n",
-      "Bool[1, 1]\n",
-      "Bool[1, 1]\n",
+      "Bool[0, 0]\n",
       "Bool[1, 1]\n"
      ]
     }
@@ -669,11 +652,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "and we see entanglement in correlation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -685,15 +682,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.7.0",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.7.0"
   }
  },
  "nbformat": 4,
